# gmail_router

./: .Dockerfile  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  credentials.yaml.example  routing.yaml.example  todo.md
.github/workflows/: docker-image.yml
src/: config.rs  gmail.rs  lib.rs  main.rs  processor.rs
